--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(msr_gen ./src/main.cpp)
 
 execute_process(COMMAND sudo cp msr_gen /usr/bin/)
 
-execute_process(COMMAND (sudo cp ../msr_data.service /etc/systemd/system/) || (sudo cp ./msr_data.service /etc/systemd/system/))
+execute_process(COMMAND (sudo cp ../msr_server.service /etc/systemd/system/) || (sudo cp ./msr_server.service /etc/systemd/system/))
