--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "express": "^4.18.2"
+    "@types/express": "^4.17.17"
   }
 }
