fixed web server

--- a/msr_rest_server.service
+++ b/msr_rest_server.service
@@ -2,7 +2,7 @@
 Description="generates data from msr on port 3230"
 
 [Service]
-ExecStart = npx ts-node ./src/msr_server.ts
+ExecStart = npx ts-node /var/msr_server/msr_server.ts
 
 [Install]
 WantedBy=multi-user.target
