--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
+    "msr_server": "file:../../../../../var/msr_server",
     "ts-node": "^10.9.1"
   }
 }
