--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,16 @@
-cmake_minimum_required(VERSION 3.16.3)
+cmake_minimum_required(VERSION 3.12)
 
-project(msr_server)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+project(msr_server C CXX ASM)
 
-add_executable(msr_gen ./src/main.cpp)
+set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -lm")
+
+
+
+add_executable(msr_gen ./src/main.c)
+
+target_link_libraries(
+    msr_gen
+    ${CMAKE_SOURCE_DIR}/target/release/libmsr_rs.a
+)
