--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ crate-type = ["cdylib"]
 raw-cpuid = "10.7.0"
 sysinfo = "0.28.4"
 lazy_static = "1.4.0"
+serde = {version = "1.0.175", features = ["derive", "alloc"]}
+serde_json = "1.0.103"
