--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ sysinfo = "0.28.4"
 lazy_static = "1.4.0"
 serde = {version = "1.0.175", features = ["derive", "alloc"]}
 serde_json = "1.0.103"
+toml = "0.7.6"
