--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ lazy_static = "1.4.0"
 serde = {version = "1.0.175", features = ["derive", "alloc"]}
 serde_json = "1.0.103"
 toml = "0.7.6"
+rocket = {version = "0.4.11", features = [] }
+
