some moving arround, preparations for modular part

--- a/msr_server.service
+++ b/msr_server.service
@@ -2,7 +2,7 @@
 Description="generates data from msr in file /msr_data.toml"
 
 [Service]
-ExecStart = /usr/bin/msr_gen -f
+ExecStart = /usr/bin/msr_gen -r
 
 [Install]
 WantedBy=multi-user.target
