--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ serde = {version = "1.0.175", features = ["derive", "alloc"]}
 serde_json = "1.0.103"
 toml = "0.7.6"
 rocket = {version = "0.4.11", features = [] }
+reqwest = {version = "0.11.18", features = ["blocking"]}
 
