--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ lazy_static = "1.4.0"
 serde = {version = "1.0.175", features = ["derive", "alloc"]}
 serde_json = "1.0.103"
 toml = "0.8.6"
-rocket = {version = "0.4.11", features = [] }
 reqwest = {version = "0.11.18", features = ["blocking"]}
+actix-web = "4.4.0"
 
