--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ serde_json = "1.0.103"
 toml = "0.8.6"
 reqwest = {version = "0.11.18", features = ["blocking"]}
 actix-web = "4.4.0"
+actix-cors = "0.7.0"
 
